# ppm-models

./: Cargo.toml  README.md
.sqlx/: query-00e4ce643b57ae2a95d82c49a1262620685b03084bf0a48756f7d159f2849659.json  query-146db33afddc4a4588ed1a535ae4577736a8f9ec68dcf645fd96e86c49beb9e9.json  query-1bf21f22b87d0f9e5d18a75842030dc1d1996a719cc31f68cfba8f94ea31874c.json  query-29edbe7e1c8a749f8fe6aab2e39ce0fe2b641fa9a3dddf88effde5e10a56c97b.json  query-5af1fd8187d5fe5131eec14dea5ef7c7c83ff29e2f7632601d28c6c120f4b928.json  query-64e7373edc875070b7a7d53080edff51f3f9de49b70b0bbe390367c0330203ad.json  query-9fe1cf31caf21088e6681acb7777f40b4c9ba840e51f9bec12caf3d1aa2de5c3.json  query-a3eb034f20f47ec3ed38d07b184c6bde66f6eca04299cc1d067b2c1419e9a9b4.json  query-daed753534be89b56dff5d40fc01de41ba0b290a56241da2f1ab073053444c3c.json  query-eb60f6d3dcf65ffff19fd75aa4c8878773d278997f3cdae180e7c652cb7bc900.json
src/: lib.rs
src/auth/: mod.rs  request.rs  response.rs
src/chat/: client.rs  server.rs
src/client/: auth.rs  data.rs  message.rs  mod.rs
src/database/: mod.rs  raw.rs  sqlite.rs
src/keys/: mod.rs
src/new/client/: mod.rs
src/new/server/: auth.rs  mod.rs
src/old/client/: data.rs  message.rs  mod.rs
src/old/database/: mod.rs  sqlite.rs
src/old/server/: error.rs  message.rs
src/server/: auth.rs  error.rs  message.rs  mod.rs
