[package]
name = "ppm-models"
version = "0.6.5"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.93"
tsify-next = { version = "0.5.4", features = ["js"] }

# ed25519-dalek = { version = "2.1.1", features = ["serde"] }
# x25519-dalek = { version = "2.0.1", features = ["serde"] }
